# rust_cg_math

./: .gitignore  Cargo.toml
proptest-regressions/: vec.txt
src/: bounds.rs  curves.rs  lib.rs  misc.rs  pdf.rs  point.rs  prelude.rs  random.rs  ray.rs  sample.rs  spaces.rs  spectral.rs  tangent_frame.rs  traits.rs  transform.rs  vec.rs
src/color/: mod.rs  rgb.rs  xyz.rs
src/spectral/: hw.rs  mod.rs  sw.rs
