[package]
name = "math"
version = "2.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.10.1"
num-traits = "~0.2"
nalgebra = "~0.32"
num_cpus = "~1"
ordered-float = "~4.2"
rand = "~0.8"
rayon = "~1.10"
serde = { version = "~1.0", features = ["derive"] }


[build-dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

[features]
# feature flag to bring in a custom trait that adds .exp and .powf methods to f32x4.
# temporary fix pending https://github.com/rust-lang/portable-simd/pull/400 being brought into the rust nightly
default = ["simdfloat_patch"]
simdfloat_patch = []

[profile.dev]
opt-level = 3
panic = 'abort'
debug = true

[profile.test]
opt-level = 0
